# Kanban_FastAPI

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_23_1124-4f266834a8f4_init.py  2024_07_24_0631-21ca0896068b_add_username_in_users.py  2024_07_25_0657-8305bbf59ab0_init_new_db.py  2024_07_30_1324-e95e6585023d_add_table_tasks.py
auth/: __init__.py  dependencies.py  manager.py  schemas.py  strategies.py  transports.py  utils.py
core/: config.py  database.py  exceptions.py
src/: main.py
src/core/: __init__.py  database.py
src/templates/: base.html  index.html
src/templates/users/: registration.html
src/users/: __init__.py  models.py  routers.py
tasks/: crud.py  models.py  router.py  schemas.py
templates/: base.html  error.html  index.html
templates/users/: registration.html
users/: crud.py  models.py  routers.py
