[tool.poetry]
name = "kanban-fastapi"
version = "0.1.0"
description = ""
authors = ["SRubtsov <frexrub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.1"}
sqlalchemy = {extras = ["asyncaio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
